--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,298 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+* {
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: montserrat, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.log{
+  height:100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(221, 219, 218);
+}
+form{
+  display: block;
+  position: relative;
+}
+form:after{
+  content: '';
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: 1;
+  background-image: linear-gradient(to bottom right,white,white);
+
+}
+form .form-inner{
+  position: relative;
+  display: block;
+  background-color:#FFF;
+  padding: 30px;
+  z-index: 2;
+}
+form .form-inner h2{
+  color: rgb(20, 19, 19);
+
+  font-size: 28px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+form .form-inner .form-group{
+  display: block;
+  width: 300px;
+  margin-bottom: 15px;
+}
+
+.form-inner .form-group label{
+display:block;
+color: #666;
+font-size: 12px;
+margin-bottom: 5px;
+transition: 0.4s;
+}
+.form-inner .form-group:focus-within label{
+  color: #FE4880
+}
+
+form .form-inner .form-group input{
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+  transition: 0.4s;
+}
+form .form-inner .form-group input:focus{
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}
+form .form-inner button{
+  display:inline-block;
+  border-radius: 8px;
+  background-size: 200%;
+  background-position: 0%;
+  transition: 0.4s;
+  color: #FFF;
+  font-weight: 700;
+  cursor: pointer;
+  background-color: #008CBA;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+}
+form .form-inner button :hover{
+  background-position: 100% 0%;
+}
+form .form-inner button:disabled{
+  border: 1px solid #999999;
+  background-color: #0f0f0f;
+  color: #f3ecec;
+}
+form .form-inner .form-group span{
+  color: red;
+}
+.dash{
+  width:100px;
+  height:100vh;
+  display: grid;
+  display: start;
+}
+
+
+.side{
+  
+  height: 100%;
+  width: 30%;
+  background-color:lightcoral;
+  display: grid;
+}
+.side .SidebarList{
+  height: auto;
+  padding-left: 0px;
+  width:100px;
+  color: #F8F8F8;
+  
+}
+.side .SidebarList .row{
+width: 100px;
+height:80px;
+align-items: center;
+justify-content: center;
+display: grid;
+
+}
+.side .SidebarList .row:hover{
+  cursor: pointer;
+  
+}
+
+
+.dashboard{
+    font-family: Optima,sans-serif;
+    margin: 0;
+    border:0;
+    display: flex;
+    height: 100%;
+    width: 100vw;
+    background-color:lightcoral;
+  
+}
+.content{
+  background-color:rgb(247, 205, 191);
+  border-top-left-radius: 35px;
+  border-bottom-left-radius: 35px;
+  padding-left: 0px;
+  width:100vw;
+}
+.topSec{
+  position: start;
+  display: flex;
+  float: left;
+  padding-left: 50px;
+  
+}
+.sea{
+  position: relative;
+}
+.search-btn{
+  position: absolute;
+  top:60px;
+  left: 7px;
+  width: 20px;
+  height: 20px;
+  border:transparent;
+  background-color:transparent; 
+}
+.searchcontrol{
+  border:0;
+  border-radius:10px;
+  height:45px;
+  width:270px;
+  margin-left: 0px;
+  margin-top: 50px;
+  box-sizing: border-box;
+  padding: 0 30px;
+  outline: none;
+}
+.prof{
+ position:absolute;
+ top:0;
+ right:150px;
+ padding-top: 40px;
+ padding-right: 10px;
+ font-family: monospace;
+ font-size: 14px;
+}
+.prof .imge{
+  height: 40px;
+  width: 30px;
+}
+.box-menu{
+  display: flex;
+  padding-left: 50px;
+  padding-top: 150px;
+  position: absolute;
+  float: left;
+ 
+}
+.box{
+  margin-left: 150px;
+  padding-top: 10px;
+}
+.box .hi{
+  margin-right: 25px;
+}
+.box-menu .button{
+  background-color: rgb(255, 218, 218);
+  border:none;
+  border-radius: 5px;
+  height:45px;
+  width:50px;
+  margin-right: 60px;
+  cursor: pointer;
+}
+.box-menu .menu1{
+  float:left;
+  border: none;
+  position: relative;
+  text-align: start;
+}
+.box-menu .menu1 .txt{
+text-align:start;
+font-family: monospace;
+font-size: 14px;
+padding-top: 10px;
+}
+.box-menu .container{
+  
+  justify-content:center;
+}
+.Exp{
+  display: flex;
+  padding-left: 50px;
+  padding-top: 270px;
+  position: absolute;
+  float: left;
+}
+.Exp .pics{
+  padding-top: 30px;
+  border: none;
+  
+
+}
+.Exp .pics .child{
+  float:left;
+  border: none;
+  position: relative;
+  text-align: center;
+}
+.Exp .pics .child .top-right {
+  position: absolute;
+  top: 10px;
+  right: 40px;
+}
+.Exp .pics .child .bottom-left{
+  position: absolute;
+  bottom: 70px;
+  left: 10px;
+  color: #F8F8F8;
+}
+.Exp .pics .child .bottom-left1{
+  position: absolute;
+  bottom: 50px;
+  left: 10px;
+  color: #F8F8F8;
+}
+.Exp .pics .child .bottom-left2{
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  color: #F8F8F8;
+  font-size: 13px;
+}
+.Exp .pics .child .bottom-right{
+  position: absolute;
+  bottom: 10px;
+  right: 70px;
+  color: #F8F8F8;
+  font-size: 13px;
+}
+.Exp .pics .img{
+  height:230px;
+  width: 190px;
+  border-radius: 10px;
+  margin-right: 40px;
+}
+@media only screen and (min-width : 768px) {
+  #omos{
+    background-color: rgb(247, 205, 191);
+    height: 100%;
+    width: 100%;
+  }
 }
