--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ margin-bottom: 5px;
 transition: 0.4s;
 }
 .form-inner .form-group:focus-within label{
-  color: #FE4880
+  color: #2ab631
 }
 
 form .form-inner .form-group input{
@@ -69,7 +69,7 @@ form .form-inner .form-group input{
   transition: 0.4s;
 }
 form .form-inner .form-group input:focus{
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 3px rgba(20, 216, 30, 0.2);
 }
 form .form-inner button{
   display:inline-block;
@@ -99,7 +99,7 @@ form .form-inner .form-group span{
 }
 .dash{
   width:100px;
-  height:100vh;
+  height:130vh;
   display: grid;
   display: start;
 }
@@ -130,6 +130,7 @@ display: grid;
 .side .SidebarList .row:hover{
   cursor: pointer;
   
+  
 }
 
 
@@ -144,7 +145,7 @@ display: grid;
   
 }
 .content{
-  background-color:rgb(247, 205, 191);
+  background-color:rgb(248, 202, 186);
   border-top-left-radius: 35px;
   border-bottom-left-radius: 35px;
   padding-left: 0px;
@@ -159,6 +160,9 @@ display: grid;
 }
 .sea{
   position: relative;
+}
+.sea input{
+  font-size:20px;
 }
 .search-btn{
   position: absolute;
@@ -233,6 +237,73 @@ padding-top: 10px;
   
   justify-content:center;
 }
+.hot{
+  display: flex;
+  padding-left: 40px;
+  padding-top: 460px;
+  position: absolute;
+  float: left;
+}
+.box-hotel{
+
+  display: flex;
+  
+
+
+}
+
+.hotel-cards{
+  margin-left:0px;
+  margin-top: 600px;
+  margin-right: 20px;
+  height:55px;
+  background-color: white;
+  width:250px;
+  padding-bottom: 10px;
+  border-radius: 15px;
+  float: left;
+  
+}
+
+.hotel-cards img{
+  width:40px;
+  height: 40px;
+  margin-top: 6px;
+  margin-left: 10px;
+  border-radius: 10px;
+  }
+
+.rating{
+  float: right;
+  padding-right: 15px;
+  padding-top: 10px;
+}
+
+.hotel-desc{
+  margin-top: 0px;
+  margin-left: 60px;
+  position: relative;
+  bottom: 30px;
+  line-height:0;
+  font-size: 12px;
+  font-family:monospace;
+
+}
+.hotel-name{
+  margin-left: 60px;
+  position: relative;
+  bottom: 10px;
+  line-height:0;
+  font-size: 12px;
+  font-family: monospace;
+}
+.ukg{ 
+  position:absolute;
+  top:535px;
+  right:585px;
+  padding-top: 40px;
+  padding-right: 10px;
+ }
 .Exp{
   display: flex;
   padding-left: 50px;
@@ -251,6 +322,9 @@ padding-top: 10px;
   border: none;
   position: relative;
   text-align: center;
+}
+.Exp .pics .child .lkg{
+  float:right;
 }
 .Exp .pics .child .top-right {
   position: absolute;
@@ -289,6 +363,14 @@ padding-top: 10px;
   border-radius: 10px;
   margin-right: 40px;
 }
+.lkg{
+  position:absolute;
+ top:250px;
+ right:230px;
+ padding-top: 40px;
+ padding-right: 10px;
+}
+
 @media only screen and (min-width : 768px) {
   #omos{
     background-color: rgb(247, 205, 191);
